--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       git blame -C "filename"
     </dt>
     <dd>
-      Rozpoznaje linie w pliku "filename" skopiowane z innych, które były zmodyfikowane w ramach jednego commita. Przydatne przy reorganizacji struktury programu. 
+      Rozpoznaje linie w pliku "filename" skopiowane z innych plików, które były zmodyfikowane w ramach jednego commita. Przydatne przy reorganizacji struktury programu. 
     </dd>
     <dt>
       git bisect (start, bad, good, reset)
