--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <html>
 <body>
-Początek :)
+  
+Grupa CE
+
+- git config --global user.email ""
+  GitHub używa adresu e-mail, aby za jego pomocą powiązać zatwierdzenia przekazywane z wiersza poleceń z kontem GitHub.
+  Powyższe polecenie służy do ustawienia lub zmiany adresu e-mail powiązanego z Gitem.
+  Nowoustawiony adres e-mail będzie widoczny w przyszłych zmianach, które zostaną umieszczone na GitHubie.
+  
+- git commit -a -m ""
+- git diff --staged
+- git checkout -b "branch"
+- git log --graph --all
+- git branch -d "branch"
+- git remote add "remote_name" "git url"
+- git fetch "remote" "branch"
+  
 </body>
 </html>
