--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@ Grupa CE
   Nowoustawiony adres e-mail będzie widoczny w przyszłych zmianach, które zostaną umieszczone na GitHubie.
   
 - git commit -a -m ""
+  Po dodaniu wszystkich plików musimy zatwierdzić zmiany w projekcie, a służy do tego polecenie commit.
+  Jako nazwa commita możemy wpisać cokolwiek co odnosi się do wprowadzonej przez nas zmiany i umieszczamy nasz komentarz w cudzysłowie.
+  Powyższe polecenie ma właśnie takie działanie, z tą różnicą, że opcja -a dokonuje zatwierdzenia zmian dla podanych plików automatycznie.
+  
 - git diff --staged
+  
+  
+  
 - git checkout -b "branch"
+  
+  
 - git log --graph --all
 - git branch -d "branch"
 - git remote add "remote_name" "git url"
