--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
 Grupa CE
 
 - git config --global user.email ""
-  GitHub używa adresu e-mail, aby za jego pomocą powiązać zatwierdzenia przekazywane z wiersza poleceń z kontem GitHub.
-  Powyższe polecenie służy do ustawienia lub zmiany adresu e-mail powiązanego z Gitem.
-  Nowoustawiony adres e-mail będzie widoczny w przyszłych zmianach, które zostaną umieszczone na GitHubie.
-  
+  Powyższe polecenie służy do ustanowienia lub zmiany adresu e-mail powiązanego z Gitem.
+    
 - git commit -a -m ""
   Po dodaniu wszystkich plików musimy zatwierdzić zmiany w projekcie, a służy do tego polecenie commit.
-  Jako nazwa commita możemy wpisać cokolwiek co odnosi się do wprowadzonej przez nas zmiany i umieszczamy nasz komentarz w cudzysłowie.
   Powyższe polecenie ma właśnie takie działanie, z tą różnicą, że opcja -a dokonuje zatwierdzenia zmian dla podanych plików automatycznie.
   
 - git diff --staged
   
-  
-  
 - git checkout -b "branch"
+  W ramach naszego repozytorium, to polecenie tworzy jego gałąź o nazwie podanej w cudzysłowiu, czyli branch, i się na nią przełącza.
   
   
 - git log --graph --all
+  Polecenie wyświetlające historię naszego repozytorium w postacji graficznej, czyli w tym wypadku jako graf.
+  
 - git branch -d "branch"
 - git remote add "remote_name" "git url"
 - git fetch "remote" "branch"
