--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-git config --global user.name "" - ustawia nazwe użytkownika
+git add . - dodaje wszystkie pliki do śledzenia
+git checkout "branch" - przełączanie do nowej gałęzi
 </body>
 </html>
