added desc to first

--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@ Początek :)
     Opcja <b>git config --local</b> czyta lub edytuje konfigurację z pliku .git/config, należącego do aktualnego repozytorium, określającego ustawienia specyficzne tylko dla niego. Jest to domyślny poziom konfiguracji, w przypadku braku określenia odpowiedniej opcji w poleceniu <b>git config</b>.</br>
     Ustawienia każdego z poziomów nadpisują te, które są określone na niższym poziomie, zgodnie z kolejnością: system, global, local, gdzie global nadpisuje system, a local wszytkie pozostałe. 
   </p>
+
+  <p><b>git commit -a -m ""</b></br>
+
+  Records changes to the repository. </br>
+
+  -a - also stages files (modified and deleted, but not new) (works almost like git add -u)
+
+  -m "" - with commit message inside "" 
+
 </body>
 </html>
