Basic definition of git reset HEAD

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@ Początek :)
   -a - also stages files (modified and deleted, but not new) (works almost like git add -u)
 
   -m "" - with commit message inside "" 
-  
+  </p>
   git add . - dodaje wszystkie pliki do śledzenia
   git checkout "branch" - przełączanie do nowej gałęzi
+
+  <p><b>git reset HEAD</b> <br />
+    <b>git reset</b> to przeciwieństwo <b>git add</b>. Komenda służąca do cofania zmian w lokalnym repozytorium. <br />
+    HEAD oznacza historię commitów (<i>Commit History</i>), która jest częścią jednego z trzech drzew, na których operuje git reset.
+  </p>
 
 </body>
 </html>
