--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ Początek :)
   
   git add . - dodaje wszystkie pliki do śledzenia
   git checkout "branch" - przełączanie do nowej gałęzi
+  <br>
+<b>git branch "name"</b> - tworzy nową gałąź o podanej nazwie
 
 </body>
 </html>
