--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Początek :)
     <b>git reset</b> to przeciwieństwo <b>git add</b>. Komenda służąca do cofania zmian w lokalnym repozytorium. <br />
     HEAD oznacza historię commitów (<i>Commit History</i>), która jest częścią jednego z trzech drzew, na których operuje git reset.
   </p>
-
+git -C blame - pozwala sprawdzic, kto jest autorem danej linii kodu, 'obwinic tworce'
 
 </body>
 </html>
