Dodanie wiecej info o git config --global color.ui true

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       git config --global color.ui true
     </dt>
     <dd>
-      Włącza kolorowanie wyników dzałania rodzin komend git.
+      Włącza kolorowanie wyników dzałania rodzin komend git w konsolach które to wspierają. Jeśli output jest przekierowany do pliku, to nie zostaną dodane sekwencje ANSI mówiące o kolorze.
     </dd>
     <dt>
       git commit "filename"
