Opis 2 koment z przykładami użycia

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 </head>
 <body>
   <main class="main_content">
+<h1> GRUPA CF </H1>
+- git commit "filename"
+  Tworzy commit o komentarzu "filename"
+- git push "remote" "branch" - służy do pushowania lokalnych zmian do konkretnego brancha repozytorium
+  Zwykle używamy "git push origin master" do pushowania naszych lokalnych zmian do internetowego repozytorium.
+
   
 Grupa CE
 
